@startuml

skinparam classAttributeIconSize 0
hide empty members

left to right direction

class Usuario {
    -idUsuario: int
    -login: string
    -senha: string

    +autenticar(): bool
    +registrarEntradaInsumo(): void
    +registrarSaidaInsumo(): void
    +consultarEstoque(): void
    +consultarHistorico(): void
}

class Administrador extends Usuario {
    +cadastrarUsuario(): void
    +cadastrarEscola(): void
    +cadastrarFornecedor(): void
    +cadastrarInsumo(): void
}

class Movimentacao {
    -idMovimentacao: int
    -data: date
    -tipo: enum 

    +imprimirGuia(): void
}

class Escola {
    -idEscola: int
    -nome: string
    -endereco: string
    -numeroAlunos: int
}

class Fornecedor {
    -idFornecedor: int
    -nomeRazaoSocial: string
    -contato: string
}

class Item {
    - quantidade: int
}

class Insumo {
    -idInsumo: int
    -nome: string
    -unidadeMedida: string
    -categoria: string
    -mediaConsumida: float
    -quantidadeEmEstoque: int 
}


Usuario "1" -- "0..*" Movimentacao : Registra

Movimentacao "0..*" -- "1" Escola : Vai para

Movimentacao "0..*" -- "1" Fornecedor : Contém

Item "1..*" -- "1" Movimentacao: Pertence 

Insumo "1" -- "0..*" Item

@enduml